<resources>
    <string name="app_name">PoochFinder</string>
    <string name="enter_details">Enter details</string>
    <string name="user_email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Already member? Sign In</string>
    <string name="signup">Signup</string>
    <string name="hello_blank_fragment">Hello! nice to see you!</string>
    <string name="fetch_pooch_info_btn">Thats not my dog!</string>
    <string name="home_tab_title">Home</string>
    <string name="my_dog_tab_title">My Dog</string>
    <string name="unknown_breed">Unknown Breed</string>
    <string name="user_signup_alert">Please enter all details !!</string>
    <string name="server_error">Server Error</string>
    <string name="server_error_msg">We\'re sorry! The server encountered an internal error and was unable to complete your request. Please try again later.</string>
    <string name="connectivity_error">Connectivity problem</string>
    <string name="connectivity_error_msg">Please check internet connection</string>
    <string name="progress_dialog_title">Please wait...</string>
    <string name="error_dialog_ok">Ok</string>
    <string name="error_dialog_retry">Retry</string>
</resources>
